# arandasoft-cpp-prueba-tecnica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
arboles/: CMakeLists.txt
arboles/include/: arbol.h  arbolbinario.h  nodo.h  nodobinario.h
arboles/src/: null.cpp
arboles/test/: CMakeLists.txt  arbolestest.cpp
basedatos/: CMakeLists.txt
basedatos/include/: conexionbd.h  fechas.h  mapeadorarbolbinario.h
basedatos/src/: conexionbd.cpp  fechas.cpp  mapeadorarbolbinario.cpp
basedatos/test/: CMakeLists.txt  basedatostest.cpp
docs/ENDPOINTS/: swagger.yaml
docs/SQL/: crear tablas.sql
docs/UML/: CasosDeUso.xml  Clases.xml  Componentes.xml  Requerimientos.xml  Tablas.xml
plantillas/: plantilla.cpp  plantilla.h
servicio/: CMakeLists.txt
servicio/include/: clienterest.h  controladorrest.h  servicioarboles.h  servidorrest.h  utilidadesservicio.h
servicio/src/: clienterest.cpp  controladorrest.cpp  servicioarboles.cpp  servidorrest.cpp  utilidadesservicio.cpp
servicio/test/: CMakeLists.txt  serviciostest.cpp
www/: generadorarboles.py  pruebas.py
